# stockstock

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.bmad-core/: core-config.yaml  install-manifest.yaml
.github/workflows/: web-e2e.yml  web-unit.yml
.windsurf/workflows/: bmad-master.md  bmad-orchestrator.md  dev.md
apps/web/: .env.example  .eslintrc.json  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
docs/: architecture.md  brainstorming-session-results.md  front-end-spec.md  prd.md  project-brief.md  roadmap.md  schema.sql  ui-generator-prompt.md
docs/architecture/: 01-introduction.md  02-high-level-architecture.md  03-tech-stack.md  04-data-models.md  05-api-spec.md  06-components-and-workflows.md  07-frontend-architecture.md  08-backend-architecture.md  09-deployment-architecture.md  10-security-and-performance.md  11-testing-strategy.md  12-coding-standards.md  13-error-handling.md  14-monitoring-and-observability.md  README.md
docs/prd/: checklist-results-reportpm-checklist.md  epic-details.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  (+1 more)
services/backtest/: pyproject.toml
services/backtest/app/: main.py  observability.py  orchestrator.py  worker.py
services/backtest/tests/: test_main_internal_optimizations.py  test_observability.py  test_orchestrator.py  test_queue_slo.py  test_worker.py
(+149 files in other folders)
