[project]
name = "stockstock-backtest"
version = "0.1.0"
description = "Backtest service (placeholder)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "structlog>=24.1",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "httpx>=0.27"
]

[tool.setuptools]
package-dir = {"" = "app"}
